--- a/app/src/main/res/layout/activity_detail_annonce.xml
+++ b/app/src/main/res/layout/activity_detail_annonce.xml
@@ -15,19 +15,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-
-            <com.glide.slider.library.SliderLayout
+            <ImageView
+                android:id="@+id/proprieteImage"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_alignParentTop="true"
-                android:id="@+id/imageSlider"
-                android:layout_gravity="center"
-                >
-
-
-            </com.glide.slider.library.SliderLayout>
-
+                android:scaleType="centerCrop"
+                android:src="@mipmap/tmp"
+                android:transitionName="transitionAnnonceImage"
+                tools:ignore="ContentDescription,UnusedAttribute" />
 
 
             <RelativeLayout
@@ -159,9 +154,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:text="Commentaire"
                     android:textSize="20sp"
-                    tools:ignore="HardcodedText"
-                    android:text="@string/Caract" />
+                    tools:ignore="HardcodedText" />
 
 
                 <RelativeLayout
@@ -264,6 +259,21 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
+        app:behavior_autoHide="false"
         app:fabSize="normal" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/comentaire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:src="@drawable/ic_create_black_24dp"
+        app:behavior_autoHide="false"
+        app:elevation="4dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@+id/photo"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
